Paketstruktur den Bounded Contexts angepasst und Anbieterverwaltung sowie Userverwaltung als Bounded Contexts hinzugefügt. Außerdem alles für REST zur Kommunikation mit der Oberfläche vorbereitet.